--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json",
+    "start": "npm run start:json-server & npm run start:graphql",
+    "start:json-server": "json-server --watch db.json",
+    "start:graphql": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.9.7",
+    "apollo-server": "^2.19.2",
     "json-server": "^0.16.3"
   }
 }
