refactor: renames app to dad-joke-dadabase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dad-joke-dadabase-v2",
+  "name": "dad-joke-dadabase",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
