--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run start:json-server & npm run start:graphql",
-    "start:json-server": "json-server --watch db.json",
-    "start:graphql": "node server.js",
+    "start:json-server": "json-server --watch src/db.json",
+    "start:graphql": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["graphql", "apollo", "apollo server", "json-server", "rest api"],
