feat: removes json-server locally and uses API from Heroku app

--- a/package.json
+++ b/package.json
@@ -6,24 +6,20 @@
   "scripts": {
     "format": "prettier --write \"{src,public}/**/*.{js,jsx,md}\"",
     "format:watch": "onchange \"{src,public}/**/*.{js,jsx,md}\" -- prettier --write {{changed}}",
-    "start": "npm run start:json-server & npm run start:graphql",
-    "start:json-server": "node src/json-server --watch",
-    "start:graphql": "node src/apollo-server.js",
+    "start": "node src/apollo-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "graphql",
     "apollo",
-    "apollo server",
-    "json-server",
-    "rest api"
+    "apollo server"
   ],
   "author": "Tyler Hawkins",
   "license": "ISC",
   "dependencies": {
     "apollo-datasource-rest": "^0.9.7",
-    "apollo-server": "^2.19.2",
-    "json-server": "^0.16.3"
+    "apollo-server-express": "^2.19.2",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "onchange": "^7.1.0",
